manifests/big-bang.tmpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    owner: bigbang
  name: bigbang
