manifests/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    owner: bigbang
  name: bigbang
---
apiVersion: v1
kind: Namespace
metadata:
  name: softwarefactoryaddons
  labels:
    istio-injection: disabled
    owner: softwarefactoryaddons
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-operator
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: jira
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: confluence
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    istio-injection: enabled
