manifests/softwarefactoryaddons-deps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: softwarefactoryaddons
  labels:
    istio-injection: disabled
    owner: softwarefactoryaddons
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-operator
  labels:
    istio-injection: disabled
