manifests/softwarefactoryaddons.tmpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: softwarefactoryaddons
  labels:
    istio-injection: disabled
    owner: softwarefactoryaddons
---
apiVersion: v1
kind: Namespace
metadata:
  name: jira
  labels:
    istio-injection: enabled
    owner: softwarefactoryaddons
---
apiVersion: v1
kind: Namespace
metadata:
  name: confluence
  labels:
    istio-injection: enabled
    owner: softwarefactoryaddons
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    istio-injection: enabled
    owner: softwarefactoryaddons
