manifests/softwarefactoryaddons.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jira
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: confluence
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: artifactory
  labels:
    istio-injection: enabled
